tests/transpiler/x/hs/query_sum_select.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 16:07 GMT+7
nums = [1, 2, 3]

result = [sum n | n <- nums, n > 1]

main :: IO ()
main = do
    print (result)
